[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/ok_bt1.png" type="Texture" id=1]
[ext_resource path="res://ConceptToDo.gd" type="Script" id=2]
[ext_resource path="res://Assets/enemyFlyingAlt_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/enemyFlyingAlt_1.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Bkg" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Bkg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
margin_bottom = 8.0
rect_min_size = Vector2( 400, 750 )

[node name="Panel" type="Panel" parent="Bkg/VBoxContainer"]
margin_right = 404.0
margin_bottom = 350.0
rect_min_size = Vector2( 400, 350 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bkg/VBoxContainer/Panel"]
position = Vector2( 200, 161 )
frames = SubResource( 1 )

[node name="Label" type="Label" parent="Bkg/VBoxContainer/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 117.0
margin_right = -200.0
margin_bottom = 155.0
rect_scale = Vector2( 2, 2 )
text = "To Do"
valign = 1
autowrap = true

[node name="ItemList" type="ItemList" parent="Bkg/VBoxContainer"]
margin_top = 354.0
margin_right = 404.0
margin_bottom = 654.0
rect_min_size = Vector2( 400, 300 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bkg/VBoxContainer"]
margin_top = 658.0
margin_right = 404.0
margin_bottom = 758.0
rect_min_size = Vector2( 400, 100 )

[node name="LineEdit" type="LineEdit" parent="Bkg/VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )

[node name="TextureButton" type="TextureButton" parent="Bkg/VBoxContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 1 )

[connection signal="item_activated" from="Bkg/VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="Bkg/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="nothing_selected" from="Bkg/VBoxContainer/ItemList" to="." method="_on_ItemList_nothing_selected"]
[connection signal="text_changed" from="Bkg/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="Bkg/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Bkg/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
